forecast cards generate

--- a/index.html
+++ b/index.html
@@ -39,46 +39,10 @@
         </div>
       </aside>
       <div id="weather-display">
-        <div id="current">
-          <h2>City Name 12/14/2022</h2>
-          <p>Temp: 40 deg F</p>
-          <p>Wind: 8.43 MPH</p>
-          <p>Humidity: 44%</p>
-        </div>
+        <div id="current"></div>
         <div id="forecast">
           <h3>5-Day Forecast:</h3>
-          <div id="cards">
-            <div class="card">
-              <h4>12/14/2022</h4>
-              <p>Temp: 40 deg F</p>
-              <p>Wind: 8.43 MPH</p>
-              <p>Humidity: 44%</p>
-            </div>
-            <div class="card">
-              <h4>12/15/2022</h4>
-              <p>Temp: 40 deg F</p>
-              <p>Wind: 8.43 MPH</p>
-              <p>Humidity: 44%</p>
-            </div>
-            <div class="card">
-              <h4>12/15/2022</h4>
-              <p>Temp: 40 deg F</p>
-              <p>Wind: 8.43 MPH</p>
-              <p>Humidity: 44%</p>
-            </div>
-            <div class="card">
-              <h4>12/15/2022</h4>
-              <p>Temp: 40 deg F</p>
-              <p>Wind: 8.43 MPH</p>
-              <p>Humidity: 44%</p>
-            </div>
-            <div class="card">
-              <h4>12/15/2022</h4>
-              <p>Temp: 40 deg F</p>
-              <p>Wind: 8.43 MPH</p>
-              <p>Humidity: 44%</p>
-            </div>
-          </div>
+          <div id="cards"></div>
         </div>
       </div>
     </main>
